--- a/style.css
+++ b/style.css
@@ -44,18 +44,45 @@ body{
     100% { transform: rotate(360deg); }
   }
   .responsive-grid {
-    display: flex;
+    display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 10px;
-    justify-items: center;
-    flex-direction: column;
   }
+
+  .grid-item-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+    border: 1px solid #ddd;
+    background-color: #f9f9f9;
+    cursor: pointer;
+    transition: box-shadow 0.3s ease;
+  }
+
+  .grid-item-container:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+
   .grid-item {
-    width: 80%;
-    margin: auto;
-    max-height: 100%;
+    max-width: 100%;
     height: auto;
   }
+
+  .file-info {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 10px;
+  }
+
+  .file-name {
+    font-size: 18px; /* Make the font size bigger */
+    margin-left: 10px; /* Add margin to separate from the image */
+    font-weight: bold;
+  }
+
   .search-container {
     display: flex;
     align-items: center;
@@ -87,4 +114,31 @@ body{
 /* Style the placeholder text inside the search box */
 .search-box::placeholder {
     color: white;
+}
+.lightbox {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 30px;
+  cursor: pointer;
+  color: white;
+}
+
+#lightbox-image {
+  max-width: 80%;
+  max-height: 80%;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.6); /* Add shadow to the image */
 }
